tests/fixtures/invalid/divmod_float_none.py
# Cannot call divmod() with Float, None
x = divmod(1.0, None)
